# babble-buddy

./: .gitignore  LICENSE  PLAN.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
docs/: MULTI_AGENT_PLAN.md
services/agent-core/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/agent-core/alembic/: env.py
services/agent-core/app/: config.py  main.py
services/agent-core/app/api/routes/: agents.py  chat.py  extraction.py  health.py  memory.py  suggestions.py  tokens.py
services/agent-core/app/core/: auth.py  logging.py  memory.py  memory_extractor.py  orchestrator.py  prompts.py  rate_limit.py  sessions.py
services/agent-core/app/crud/: __init__.py  agent.py
services/agent-core/app/db/: database.py  models.py
services/agent-core/app/providers/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  ollama.py  openai.py
services/agent-core/app/schemas/: __init__.py  agent.py
services/agent-core/app/utils/: __init__.py  encryption.py  features.py
services/agent-core/static/: babble-buddy.js  babble-buddy.umd.cjs
services/agent-core/tests/: __init__.py  conftest.py  test_agents.py  test_chat_api.py  test_features.py  test_memory.py  test_memory_extractor.py  test_orchestrator.py  test_providers.py
services/ollama/: Dockerfile  README.md  railway.toml  start.sh
